--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Razorpay</title>
 </head>
 <body>
+    <!--NavBar-->
     <nav class="bg-deepBlue">
         <div class="relative w-[1080px] mx-auto flex items-center justify-between ">
 
@@ -97,5 +98,34 @@
                  
             </div>
     </nav>
+
+    <!--Hero Section-->
+    <section class=
+    "relative bg-deepBlue">
+
+        <div class="w-10/12 flex flex-row justify-between  items-center mx-auto">
+            <!--left part-->
+            <div class=" flex flex-col gap-4">
+                <h1 class=" font-mullish font-bold text-[40px] leading-[1.2] text-white">Power your finance, grow your business</h1>
+                <div class="w-6 h-1 bg-greenLight"></div>
+                <p class="font-mullish text-[19px] leading-7  text-white opacity-70">
+                    Accept payments from customers, Automate payout to vendors &
+                    employess. never run out of Working Capital. 
+                </p>
+                <button 
+                class=" font-mullish font-bold bg-lightBlue text-white  rounded-md hover:bg-lightBlue500
+                cursor-pointer transition-all duration-200 py-[14px] px-[18px]  ">Sign Up Now</button>
+            </div>
+
+            <!--right part-->
+            <img src="./images/hero-illustration.jpg" alt="">
+        </div>
+
+        <!--shape part-->
+        <div>
+            <img src="./images/hero-shape.svg" alt="">
+        </div>
+    
+    </section>
 </body>
 </html>
