started with th feature section created the external structure of it

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+
     <title>Razorpay</title>
 </head>
 <body>
-    <!--NavBar-->
-    <nav class="bg-deepBlue">
+    <!--Navbar-->
+    <nav class="bg-deepBlue ">
         <div class="relative w-[1080px] mx-auto flex items-center justify-between ">
 
             <!-- logo -->
@@ -87,45 +88,94 @@
                     />
                 <button class="py-3 px-5 font-mullish text-white border-lightBlue border
                 rounded-sm text-sm  font-bold">Log in</button>
-                <button class="py-3 px-4 font-mullish rounded-sm text-sm font-bold
+                <button class="py-3 px-4 font-mullish rounded-md text-sm font-bold
                 bg-white text-lightBlue300 border transition-all duration-200
-                hover:text-lightBlue500 flex ">Sign Up
+                hover:text-lightBlue500 flex">Sign Up
                 <img src="./images/arrow-right-solid.svg" class=" 0.9py mx-2 0.9px w-[15px] rounded-sm">
                 <i class="fa-brand fa-arrow-right"></i>
                 </button>
-
-                   </div>
-                 
             </div>
+
+
+        </div>
     </nav>
 
     <!--Hero Section-->
-    <section class=
-    "relative bg-deepBlue">
+    <section
+    class="relative bg-deepBlue">
 
-        <div class="w-10/12 flex flex-row justify-between  items-center mx-auto">
-            <!--left part-->
-            <div class=" flex flex-col gap-4">
-                <h1 class=" font-mullish font-bold text-[40px] leading-[1.2] text-white">Power your finance, grow your business</h1>
-                <div class="w-6 h-1 bg-greenLight"></div>
-                <p class="font-mullish text-[19px] leading-7  text-white opacity-70">
-                    Accept payments from customers, Automate payout to vendors &
-                    employess. never run out of Working Capital. 
-                </p>
-                <button 
-                class=" font-mullish font-bold bg-lightBlue text-white  rounded-md hover:bg-lightBlue500
-                cursor-pointer transition-all duration-200 py-[14px] px-[18px]  ">Sign Up Now</button>
+    <div class="w-10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto ">
+        <!--left part-->
+        <div class="space-y-8">
+            <h1 class="font-mullish font-bold text-[40px] leading-[1.2] text-white">Power your finance, grow your business</h1>
+            <div class="w-6 h-1 bg-greenLight"></div>
+            <p class="font-mullish text-[18px] leading-7 text-white opacity-70">
+                Accept payments from customers. Automate payouts to vendors &
+                employees. Never run out of working capital.
+            </p>
+            <button
+            class="bg-lightBlue text-white  py-[14px] px-[18px] rounded-md font-mullish font-bold
+            hover:bg-lightBlue500 transition-all duration-200"
+            >Sign Up Now</button>
+        </div>
+        <!--right part-->
+        <img src="./images/hero-illustration.jpg" alt=""
+        class="w-full max-w-[680px]">
+    </div>
+
+    <!--shape part-->
+    <div class="w-[103%] absolute left-0 right-0">
+        <img src="./images/hero-shape.svg" alt=""
+        class="w-full object-fill ">
+    </div>
+
+    </section>
+
+    <!--feature section-->
+
+    <section>
+        <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy"
+        width="233" height="167">
+        <img src="./images/feature-section1-dottedrows.png" alt=""  loading="lazy "
+        width="233" height="167">
+
+        <div>
+            <!--heading-->
+            <h2> Accept Payment with Razorpay Payment Suite</h2>
+            <div></div>
+
+            <!--content box-->
+            <div>
+                <!--left setion-->
+                <div>
+                    <h3>
+                        Superchare your business with the all powerfull
+                        <span class="text-lightBlue font-mullish">Payment Gateway</span>
+                    </h3>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+
+                    <!--for button and hyperlink-->
+                    <div>
+                        <button></button>
+                        <!--hyperlink-->
+                        <div>
+                            <a href=""></a>
+                            <i> </i>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
-            <!--right part-->
-            <img src="./images/hero-illustration.jpg" alt="">
         </div>
 
-        <!--shape part-->
-        <div>
-            <img src="./images/hero-shape.svg" alt="">
-        </div>
-    
     </section>
 </body>
 </html>
